# SimpleComponentTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/UML/: data_struct_v0.0.1.plantuml  module_architectur.plantuml  overview_v0.0.1.plantuml
example/: CMakeLists.txt
example/hello_world/: CMakeLists.txt  hello_world_component.hpp  hello_world_conf.json  hello_world_conf_1.json  hello_world_conf_2.json  hello_world_module.cpp  hello_world_module.hpp
include/sct/: sct.hpp
include/sct/base/: handle.hpp  init.hpp
include/sct/component/: component.hpp  component_base.hpp
include/sct/controller/: controller.hpp
include/sct/scheduler/: scheduler.hpp
include/sct/util/: arg_parser.hpp  args_parser.hpp  json_key.hpp  logger.hpp
include/smt/: smt.hpp
include/smt/base/: handle.hpp
include/smt/controller/: ModuleController.hpp  module_controller.hpp
include/smt/loader/: Dlopen.hpp  ModuleFactory.hpp  ModuleLoader.hpp  ModuleLoaderManager.hpp  ModuleLoaderUtil.hpp  ModuleOpener.hpp  ModuleRegist.hpp  ModuleRegister.hpp  module_factory.hpp  module_load_manager.hpp  module_loader.hpp  module_loader_regist_macro.hpp  module_loader_util.hpp
include/smt/module/: Module.hpp  ModuleBase.hpp  ModuleInfo.hpp  ModuleRegister.hpp  module.hpp  module_base.hpp
include/smt/util/: ArgsParser.hpp  IdGenerator.hpp  JsonKey.hpp  JsonWrapper.hpp  Logger.hpp  args_parser.hpp  json_key.hpp  logger.hpp
launcher/: CMakeLists.txt  Node.cpp
src/: CMakeLists.txt  node.cpp
src/controller/: ModuleController.cpp  module_controller.hpp
src/launcher/: CMakeLists.txt  Node.cpp
src/loader/: ModuleLoader.cpp  ModuleLoaderManager.cpp  ModuleLoaderUtil.cpp  ModuleOpener.cpp  module_factory.hpp  module_loader.hpp  module_loader_regist_macro.hpp
src/module/: ModuleInfo.cpp  module.hpp  module_base.hpp
src/scheduler/: scheduler.hpp
src/util/: JsonWrapper.cpp  Logger.cpp  Logger.hpp
